--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "bluesky-context-server",
-  "module": "index.ts",
-  "type": "module",
+	"name": "bluesky-context-server",
+	"module": "index.ts",
+	"type": "module",
 	"scripts": {
 		"start": "bun index.ts",
-		"inspector": "mcp-inspector"
+		"inspector": "mcp-inspector",
+		"format": "biome format --write ."
 	},
-  "devDependencies": {
-    "@modelcontextprotocol/inspector": "^0.7.0",
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.7.2"
-  },
-  "dependencies": {
-    "@atproto/api": "^0.13.35",
-    "@modelcontextprotocol/sdk": "^1.8.0"
-  }
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@modelcontextprotocol/inspector": "^0.7.0",
+		"@types/bun": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5.7.2"
+	},
+	"dependencies": {
+		"@atproto/api": "^0.13.35",
+		"@modelcontextprotocol/sdk": "^1.8.0"
+	}
 }
