--- a/packages/server/smithery.yaml
+++ b/packages/server/smithery.yaml
@@ -18,4 +18,4 @@ startCommand:
   commandFunction:
     # A function that produces the CLI command to start the MCP on stdio.
     |-
-    (config) => ({command: 'bun', args: ['index.ts'], env: {BLUESKY_APP_KEY: config.blueskyAppKey, BLUESKY_IDENTIFIER: config.blueskyIdentifier}})
+    (config) => ({command: 'node', args: ['dist/cli.js'], env: {BLUESKY_APP_KEY: config.blueskyAppKey, BLUESKY_IDENTIFIER: config.blueskyIdentifier}})
