--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@atproto/api": "^0.13.35",
-		"@modelcontextprotocol/sdk": "^1.8.0"
+		"@modelcontextprotocol/sdk": "^1.8.0",
+		"mcp-evals": "^1.0.18"
 	}
 }
