--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,30 +1,6 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"suspicious": {
-				"noConsoleLog": "error"
-			}
-		}
-	},
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab",
-		"indentWidth": 2,
-		"lineWidth": 80
-	},
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "double",
-			"trailingComma": "es5"
-		}
-	},
+	"$schema": "node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
-		"include": ["packages/**/*.ts", "*.ts"]
+		"experimentalScannerIgnores": ["node_modules", "dist", "build"]
 	}
 }
