--- a/packages/server/biome.jsonc
+++ b/packages/server/biome.jsonc
@@ -1,27 +1,4 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"suspicious": {
-				"noConsoleLog": "error"
-			}
-		}
-	},
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab",
-		"indentWidth": 2,
-		"lineWidth": 80
-	},
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "double",
-			"trailingComma": "es5"
-		}
-	}
+	"$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
+	"extends": ["../../biome.jsonc"]
 }
